[gd_scene load_steps=6 format=2]

[ext_resource path="res://TextEdit.gd" type="Script" id=1]
[ext_resource path="res://OptionButton.gd" type="Script" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://WindowDialog.gd" type="Script" id=4]
[ext_resource path="res://Control.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 5 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 25.0
margin_top = 194.0
margin_right = 324.0
margin_bottom = 269.0
readonly = true
show_line_numbers = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 249.0
margin_bottom = 39.0
text = "Voorbereiden macOS USB installer "

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 364.0
margin_top = 53.0
margin_right = 607.0
margin_bottom = 84.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="OptionButton"]
margin_top = -24.0
margin_right = 162.0
margin_bottom = -1.0
text = "Kies een USB volume:"

[node name="Label2" type="Label" parent="."]
margin_left = 28.0
margin_top = 169.0
margin_right = 117.0
margin_bottom = 183.0
text = "USB volumes:"

[node name="Scan" type="Button" parent="."]
margin_left = 192.0
margin_top = 48.0
margin_right = 324.0
margin_bottom = 82.0
text = "Opzoeken"
script = ExtResource( 3 )

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -72.5
margin_right = 145.0
margin_bottom = 72.5
window_title = "Voer je wachtwoord in..."
script = ExtResource( 4 )

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 20.0
margin_top = 47.5
margin_right = 60.0
margin_bottom = 61.5
text = "Wachtwoord:"

[node name="LineEdit" type="LineEdit" parent="WindowDialog"]
margin_left = 115.0
margin_top = 44.5
margin_right = 274.0
margin_bottom = 68.5
secret = true

[node name="Uitvoeren" type="Button" parent="WindowDialog"]
margin_left = 161.0
margin_top = 97.0
margin_right = 273.0
margin_bottom = 129.0
text = "Uitvoeren"

[node name="tekstOrigineelCommando" type="TextEdit" parent="."]
margin_left = 360.0
margin_top = 194.0
margin_right = 984.0
margin_bottom = 269.0
wrap_enabled = true

[node name="Label3" type="Label" parent="."]
margin_left = 364.0
margin_top = 165.0
margin_right = 741.0
margin_bottom = 186.0
text = "Plak hier het originele sudo commando van Apple:"

[node name="Bijwerken" type="Button" parent="."]
margin_left = 848.0
margin_top = 292.0
margin_right = 984.0
margin_bottom = 326.0
text = "Bijwerken"

[node name="tekstBijgewerktCommando" type="TextEdit" parent="."]
margin_left = 360.0
margin_top = 355.0
margin_right = 984.0
margin_bottom = 442.0
readonly = true
wrap_enabled = true

[node name="Uitvoeren" type="Button" parent="."]
margin_left = 848.0
margin_top = 464.0
margin_right = 985.0
margin_bottom = 499.0
disabled = true
text = "Uitvoeren"

[connection signal="button_up" from="Scan" to="." method="_on_Scan_button_up"]
[connection signal="button_up" from="WindowDialog/Uitvoeren" to="." method="_on_Uitvoeren_button_up"]
[connection signal="button_up" from="Bijwerken" to="." method="_on_Bijwerken_button_up"]
